--- a/Project/frontend/src/pages/Delivery/ViewOrder/ViewOrder.scss
+++ b/Project/frontend/src/pages/Delivery/ViewOrder/ViewOrder.scss
@@ -11,13 +11,15 @@ $secondary-color-purple4: #e9e3ff;
 	justify-content: flex-start;
 	align-items: center;
 	width: 100%;
-	height: 90%;
-	overflow: hidden;
+	padding: 10px 0;
 	position: relative;
 }
 
+.actionbar-container-view-order::-webkit-scrollbar{
+	display: none;
+}
 // search bar stylings
-.search-bar-container {
+.search-bar-container-view-order {
 	margin-top: 20px;
 	display: flex;
 	justify-content: center;
@@ -25,7 +27,7 @@ $secondary-color-purple4: #e9e3ff;
 	margin-bottom: 10px;
 }
 
-.search-field {
+.search-field-view-order {
 	width: 350px;
 	border: transparent;
 	background-color: #eaeaea;
@@ -37,7 +39,7 @@ $secondary-color-purple4: #e9e3ff;
 	outline: 2px solid $secondary-color-purple1;
 }
 
-.search-btn {
+.search-btn-view-order {
 	border: none;
 	font-size: 22px;
 	color: white;
@@ -48,13 +50,13 @@ $secondary-color-purple4: #e9e3ff;
 	background-color: $secondary-color-purple1;
 }
 
-.search-btn:hover {
+.search-btn-view-order:hover {
 	cursor: pointer;
 }
 
 // search results and displayers stylings
 
-.order-info-item-head {
+.order-info-item-head-view-order {
 	width: 100%;
 	padding: 10px 20px;
 	display: flex;
@@ -64,9 +66,10 @@ $secondary-color-purple4: #e9e3ff;
 	border-bottom: 1px solid #888;
 }
 
-.order-info {
+.order-info-view-order {
 	border-radius: 12px;
 	width: 100%;
+	height: 100%;
 	padding: 10px 20px;
 	display: flex;
 	justify-content: space-evenly;
@@ -92,31 +95,31 @@ $secondary-color-purple4: #e9e3ff;
 	font-size: 16px;
 }
 
-.search-results-section {
+.search-results-section-view-order {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	width: 95%;
+	height: 90%;
 }
 
-.search-results-container {
+.search-results-container-view-order {
 	width: 100%;
-	height: 550px;
-	padding: 0 10px;
-	margin: 5px;
-	overflow-y: scroll;
+	height: 500px;
+	overflow-y: auto;
+	padding: 10px 10px 10px 10px;
 }
 
-.search-results-container::-webkit-scrollbar {
+.search-results-container-view-order::-webkit-scrollbar {
 	width: 0.5em;
 }
 
-.search-results-container::-webkit-scrollbar-track {
+.search-results-container-view-order::-webkit-scrollbar-track {
 	background: #f1f1f1;
 }
 
-.search-results-container::-webkit-scrollbar-thumb {
+.search-results-container-view-order::-webkit-scrollbar-thumb {
 	background-color: $secondary-color-purple3;
 	border-radius: 0.5em;
 }
@@ -145,3 +148,32 @@ $secondary-color-purple4: #e9e3ff;
 .action-btns-view-orderV1:nth-child(1){
 	color: green;
 }
+
+//order status styling
+.pending-order-state{
+	background-color: #ff9800;
+	color: white;
+	text-align: center;
+	padding-bottom: 2px;
+	border-radius: 5px;
+	width: 120px;
+}
+
+.processing-order-state{
+	background-color: #54b7d3;
+	color: white;
+	text-align: center;
+	padding-bottom: 2px;
+	border-radius: 5px;
+	width: 120px;
+}
+
+.completed-order-state{
+	background-color: #4caf50;
+	color: white;
+	text-align: center;
+	padding-bottom: 2px;
+	border-radius: 5px;
+	width: 120px;
+}
+
