--- a/Project/frontend/src/components/headerAdvanced/HeaderAdvanced.scss
+++ b/Project/frontend/src/components/headerAdvanced/HeaderAdvanced.scss
@@ -10,13 +10,8 @@ $tertiary-col: #e9e3ff;
 // fonts
 $font-fam-1: "Poppins", sans-serif;
 
-* {
-    font-family: $font-fam-1;
-}
-
 .nav-container-header-adv {
     position: absolute;
-    margin-top: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -24,6 +19,20 @@ $font-fam-1: "Poppins", sans-serif;
     height: 70px;
     color: white;
     z-index: 1000;
+    background-color: #2c2c54;
+}
+
+.nav-container-header-adv-without-color {
+    position: absolute;
+    margin: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+    height: 70px;
+    color: white;
+    z-index: 1000;
+    background-color: transparent;
 }
 
 .partition-nav-1 {
@@ -41,6 +50,7 @@ $font-fam-1: "Poppins", sans-serif;
     margin-left: 20px;
     font-weight: 700;
     color: white;
+    font-family: $font-fam-1;
 }
 
 .partition-nav-2-header-adv {
@@ -51,6 +61,7 @@ $font-fam-1: "Poppins", sans-serif;
     margin-right: 10px;
     font-size: 0.9em;
     color: white;
+    font-family: $font-fam-1;
     transform: translateX(300px);
 }
 
@@ -136,4 +147,5 @@ $font-fam-1: "Poppins", sans-serif;
     background-color: transparent;
     color: black;
     font-weight: 600;
+    font-family: $font-fam-1;
 }
