--- a/Project/frontend/src/pages/Home/Home-page.scss
+++ b/Project/frontend/src/pages/Home/Home-page.scss
@@ -61,6 +61,7 @@ $font-fam-1: "Poppins", sans-serif;
 	left: 0;
 	width: 100%;
 	height: 100%;
+	font-family: $font-fam-1;
 }
 
 .welcome-text {
@@ -68,6 +69,7 @@ $font-fam-1: "Poppins", sans-serif;
 	color: white;
 	line-height: 80px;
 	font-weight: 900;
+	font-family: $font-fam-1;
 }
 
 .welcome-text-body {
@@ -75,6 +77,7 @@ $font-fam-1: "Poppins", sans-serif;
 	color: white;
 	margin-top: 20px;
 	font-weight: 300;
+	font-family: $font-fam-1;
 }
 
 .schedule-appt-btn {
@@ -110,6 +113,7 @@ $font-fam-1: "Poppins", sans-serif;
 	justify-content: center;
 	align-items: flex-end;
 	padding: 10px;
+	font-family: $font-fam-1;
 }
 
 .text-section {
@@ -120,6 +124,7 @@ $font-fam-1: "Poppins", sans-serif;
 	border-radius: 20px 0 0 20px;
 	background-color: white;
 	box-shadow: 4px 4px 8px rgba($color: #000000, $alpha: 0.4);
+	font-family: $font-fam-1;
 }
 
 .watermark-logo {
@@ -143,6 +148,7 @@ $font-fam-1: "Poppins", sans-serif;
 	color: black;
 	font-weight: 700;
 	margin-bottom: 10px;
+	font-family: $font-fam-1;
 }
 
 .image-section {
@@ -156,6 +162,7 @@ $font-fam-1: "Poppins", sans-serif;
 	width: 15px;
 	background-color: $secondary-col3;
 	box-shadow: 0px 4px 8px rgba($color: #000000, $alpha: 0.4);
+	
 }
 
 .discount-container {
@@ -177,6 +184,7 @@ $font-fam-1: "Poppins", sans-serif;
 	font-weight: 800;
 	letter-spacing: 4px;
 	margin: 10px;
+	font-family: $font-fam-1;
 }
 
 .our-message {
