--- a/Project/frontend/src/components/actionbar/actionbar.scss
+++ b/Project/frontend/src/components/actionbar/actionbar.scss
@@ -54,3 +54,33 @@ $secondary-color-purple4: #E9E3FF;
     font-size: 17px;
     font-weight: 600;
 }
+
+.logout-user{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 30px;
+    font-size: 1.1em;
+    color: $secondary-color-purple1;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    transition: .3s;
+}
+
+.logout-user-icon{
+    color: $secondary-color-purple1;
+    font-size: 1.3em;
+    font-weight: 600;
+    margin-left: 5px;
+    transition: .3s;
+}
+
+.logout-user:hover{
+    color: $secondary-color-purple2;
+    cursor: pointer;
+}
+
+.logout-user:hover > .logout-user-icon{
+    color: $secondary-color-purple2;
+}
