--- a/Project/frontend/src/pages/Pet/ViewTreatment.scss
+++ b/Project/frontend/src/pages/Pet/ViewTreatment.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  // background: linear-gradient(106deg, rgba(153, 128, 250, 0.8715861344537815) 0%, rgba(255, 255, 255, 1) 100%);
+  background: linear-gradient(106deg, rgba(172, 158, 228, 0.872) 0%, rgba(255, 255, 255, 1) 100%);
   height: auto;
   min-height: 90vh;
   padding: 40px;
