--- a/Project/frontend/src/pages/Delivery/RegisterDriver/RegisterDriver.scss
+++ b/Project/frontend/src/pages/Delivery/RegisterDriver/RegisterDriver.scss
@@ -139,7 +139,9 @@ $fontfam-1: "Poppins", sans-serif;
 	color: crimson;
 	margin-left: 10px;
 	height: 18px;
-	transform: translateY(-10px);
+	transform: translateY(-20px);
+	margin-top: -10px;
+	margin-bottom: 10px;
 }
 
 .visible-non{
