--- a/Project/frontend/src/components/store/Header/header.scss
+++ b/Project/frontend/src/components/store/Header/header.scss
@@ -21,7 +21,7 @@ $font-fam-1: "Poppins", sans-serif;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #E9E3FF;
+    background-color: $primary-col;
     width: 100%;
     height: 60px;
     color: white;
@@ -42,7 +42,7 @@ $font-fam-1: "Poppins", sans-serif;
     line-height: 35px;
     margin-left: 20px;
     font-weight: 700;
-    color: #2C2C54;
+    color: white;
 }
 
 .partition-nav-2 {
@@ -64,25 +64,25 @@ $font-fam-1: "Poppins", sans-serif;
     border-bottom: 3px solid transparent;
     height: 40px;
     transition: 0.2s;
-    color: #2C2C54;
+    color: white;
 }
 
 .partition-nav-2>.nav-links:hover {
-    color: #2C2C54;
+    color: white;
     cursor: pointer;
    border-color: $secondary-col3;
 }
 
 .nav-login-btn:hover {
     background-color: $secondary-col3;
-    color: #2C2C54;
+    color: white;
     cursor: pointer;
     border-color: $secondary-col3;
 }
 
 .nav-login-btn {
     border: 2px solid #7d5fff;
-    color: #2C2C54;
+    color: white;
     background-color: transparent;
     border-radius: 20px;
     padding: 4px 20px;
